--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -584,6 +584,13 @@
     <string name="RingtonePreference_add_ringtone_text">Add ringtone</string>
     <string name="RingtonePreference_unable_to_add_ringtone">Unable to add custom ringtone</string>
 
+    <!-- Search -->
+    <string name="SearchFragment_begin_searching">Begin typing to search for conversations, messages, and contacts.</string>
+    <string name="SearchFragment_no_results">No results found for \'%s\'</string>
+    <string name="SearchFragment_header_conversations">Conversations</string>
+    <string name="SearchFragment_header_contacts">Contacts</string>
+    <string name="SearchFragment_header_messages">Messages</string>
+
     <!-- SharedContactDetailsActivity -->
     <string name="SharedContactDetailsActivity_add_to_contacts">Add to Contacts</string>
     <string name="SharedContactDetailsActivity_invite_to_signal">Invite to Signal</string>
@@ -980,6 +987,7 @@
 
     <!-- load_more_header -->
     <string name="load_more_header__see_full_conversation">See full conversation</string>
+    <string name="load_more_header__loading">Loading</string>
 
     <!-- media_overview_activity -->
     <string name="media_overview_activity__no_media">No media</string>
